--- a/index.css
+++ b/index.css
@@ -13,20 +13,24 @@ header {
     box-shadow: 0 .5px 5px #515151;
 }
 
-header .logo-container {
+header .logo-container a {
     display: flex;
     align-items: center;
     column-gap: 15px;
     cursor: pointer;
+    text-decoration: none;
+    color: #000;
 }
 
 header .logo-container img {
     height: 50px;
+    display: inline-block;
 }
 
 header .logo-container h3 {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 1.5rem;
+    display: inline-block;
 }
 
 header nav ul {
@@ -41,6 +45,11 @@ header nav ul li {
     cursor: pointer;
     padding: 10px;
     transition: all .3s ease;
+}
+
+header nav ul li a {
+    text-decoration: none;
+    color: #000;
 }
 
 header nav ul li:hover {
@@ -162,12 +171,18 @@ header nav ul li.login:hover {
     margin-top: 30px;
 }
 
+.body .restaurant-container > a {
+    text-decoration: none;
+    color: #000;
+}
+
 .restaurant-container .restaurant-card {
     background-color: #eceaea;
     padding: 10px;
     border-radius: 6px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     cursor: pointer;
+    min-height: 100%;
 }
 
 .restaurant-container .restaurant-card:hover {
@@ -199,3 +214,259 @@ footer {
     margin-top: 20px;
 }
 /** Footer Component */
+
+
+/** Restaurant Page */
+.restaurant-page {
+    margin: 0 auto;
+    padding: 30px 30px 10px 30px;
+    max-width: 900px;
+    min-height: 75vh;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+/*& Restaurant Info */
+.restaurant-page .restaurant-info {
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
+    padding-bottom: 20px;
+    border-bottom: 1px dashed #c4baba;
+}
+
+.restaurant-page .info-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.restaurant-page .info-container .restaurant-title {
+    color: #282c3f;
+}
+
+.restaurant-page .info-container .info .location {
+    display: flex;
+    flex-direction: column;
+    row-gap: 2px;
+    font-size: .8rem;
+    color: #515151;
+    padding-top: 6px;
+}
+
+.restaurant-page .info-container .ratings {
+    width: fit-content;
+    font-size: .8rem;
+    text-align: center;
+    padding: 0 6px;
+    border: 1px solid #d3cccc;
+    border-radius: 10px;
+}
+
+.restaurant-page .info-container .ratings .rating-one {
+    border-bottom: 1px solid #d3cccc;
+    color: #118811;
+    font-weight: bold;
+}
+
+.restaurant-page .info-container .ratings .rating-two {
+    display: block;
+    font-size: .7rem;
+    font-weight: bolder;
+    letter-spacing: -1px;
+    color: #515151;
+}
+
+.restaurant-page .info-container .ratings .rating-one,
+.restaurant-page .info-container .ratings .rating-two {
+    padding: 8px 0;
+}
+
+
+.restaurant-page .delivery-container {
+    display: flex;
+    margin-top: 7px;
+    font-size: .8rem;
+    color: #515151;
+}
+
+.restaurant-page .delivery-container .distance {
+    border-right: 1px solid #c4baba;
+}
+.restaurant-page .delivery-container .distance,
+.restaurant-page .delivery-container .delivery-fee {
+    padding: 0 5px;
+}
+
+.restaurant-page .other-info {
+    display: flex;
+    column-gap: 20px;
+    padding-top: 15px;
+    color: #282c3f;
+    font-weight: bold;
+}
+
+.restaurant-page .other-info i {
+    margin-right: 4px;
+}
+/*& Restaurant Info */
+
+
+/*& Restaurant Menu  */
+.menu-container {
+    margin-top: 60px;
+}
+
+.menu-container .menu-list {
+    padding: 20px;
+    border-bottom: 16px solid #f1f1f6;
+} 
+
+.menu-container .menu-list-info {
+    display: flex;
+    justify-content: space-between;
+}
+
+.menu-container .menu-list .menu-list-info .menu-list-title {
+    color: #282c3f;
+}
+
+.menu-container .menu-list .menu-list-info .toggle-menu-btns .open,
+.menu-container .menu-list .menu-list-info .toggle-menu-btns .close {
+    cursor: pointer;
+}
+
+.menu-container .menu-list .menu-list-info .toggle-menu-btns .close {
+    display: none;
+}
+
+.menu-container .menu-list .menu-items {
+    display: none;
+}
+
+.menu-container .menu-list .menu-items .menu-item {
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 20px;
+    border-bottom: 1px solid #c4baba;
+    margin-top: 25px;
+    position: relative;
+}
+
+.menu-container .menu-list .menu-item .menu-card-info .veg-img {
+    width: 18px;
+}
+
+.menu-container .menu-list .menu-item .menu-card-info .menu-name {
+    font-size: 1rem;
+    color: #3e4152;
+}
+
+.menu-container .menu-list .menu-item .menu-card-info .menu-price {
+    font-size: .9rem;
+    color: #3e4152;
+    margin-top: 2px;
+}
+
+.menu-container .menu-list .menu-item .menu-card-info .menu-description {
+    font-size: .8rem;
+    color: #adafb4;
+    margin-top: 10px;
+    padding-right: 50px;
+}
+
+.menu-container .menu-list .menu-item .menu-card-image {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.menu-container .menu-list .menu-item .menu-card-image img {
+    width: 115px;
+    height: 90px;
+    object-fit: cover;
+    border-radius: 4px;
+    box-shadow: 0px 1px 5px #303031;
+}
+
+/*& The secondline below is when we dont have img inside .menu-card-image div then the margin of .add-menu-btn should not be -20px */
+.menu-container .menu-list .menu-item .menu-card-image > img + .add-menu-btn,
+.menu-container .menu-list .menu-item .menu-card-image > .add-menu-btn {
+    width: fit-content;
+    padding: 10px 35px;
+    color: #1caf1c;
+    font-size: .75rem;
+    font-weight: bolder;
+    border-radius: 6px;
+    border: 1px solid #dacece;
+    cursor: pointer;
+    transition: all .1s ease-in;
+}
+
+/*& The line below is when we have img inside .menu-card-image div then the margin of .add-menu-btn should be -20px */
+.menu-container .menu-list .menu-item .menu-card-image > img + .add-menu-btn {
+    margin-top: -20px;
+}
+
+.menu-container .menu-list .menu-item .menu-card-image .add-menu-btn:hover {
+    box-shadow: 0px 0px 3px #fff;
+}
+/*& Restaurant Menu  */
+
+/** Restaurant Page */
+
+/** Contact Us Page */
+.form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 20px;
+    margin-top: 100px;
+    min-height: 59.1vh;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.form .form-heading {
+    font-size: 2.5rem;
+}
+
+.form form {
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
+}
+
+.form .input {
+    display: flex;
+    align-items: center;
+    column-gap: 10px;
+    position: relative;
+}
+
+.form input {
+    padding: 7px 10px;
+    width: 300px;
+    font-size: 1rem;
+    border-radius: 5px;
+    outline: none;
+    border: 1px solid #000;
+}
+
+.form button {
+    padding: 11px 30px;
+    background-color: #e0d6d6;
+    font-size: 1rem;
+    cursor: pointer;
+    border: none;
+    width: 100%;
+}
+
+.form button:hover {
+    background-color: #d4caca;
+}
+
+.form .error-message {
+    color: #ff0000;
+    position: absolute;
+    right: -310px;
+    width: 100%;
+}
+/** Contact Us Page */
